# rcl_synthetic_data

./: .gitignore  GRAPHS.md  README.md  analyze_specs.py  compare_iv_modes.py  compute_elasticities.py  estimate.py  inspect_estimates.ipynb  merger.py  plot_specs.py  pyproject.toml  requirements.txt  run_specs.py  simulate.py  solve_diagnostics.py  specs_io.py  viz_recovery.py  viz_specs.py
slurm/: README.md  aggregate_specs.sbatch  example_main_job.sh  main_job.sh  postprocess.sbatch  run_specs.sbatch
